New classes scaffolding

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ VS2015/SDL/x64/
 VS2015/SDL_Image/Debug/
 VS2015/SDL_Image/Release/
 VS2015/SDL_Image/x64/
+VS2015/pugixml/Debug/
+VS2015/pugixml/Release/
+VS2015/pugixml/x64/
 VS2015/Saphire/Debug/
 VS2015/Saphire/Release/
 VS2015/Saphire/x64/
