--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 VS2015/SDL/Debug/
 VS2015/SDL/Release/
-VS2015/SDL/x64/
+VS2015/SDL/x64/*
 VS2015/SDL_Image/Debug/
 VS2015/SDL_Image/Release/
-VS2015/SDL_Image/x64/
+VS2015/SDL_Image/x64/*
 VS2015/pugixml/Debug/
 VS2015/pugixml/Release/
-VS2015/pugixml/x64/
+VS2015/pugixml/x64/*
 VS2015/Saphire/Debug/
 VS2015/Saphire/Release/
-VS2015/Saphire/x64/
+VS2015/Saphire/x64/*
 VS2015/Debug/
 VS2015/Release/
-VS2015/x64/
+VS2015/x64/*
 *.suo
 *.sdf
 *.opensdf
