Added new widget classes and resource manager

--- a/VS2015/Saphire/Saphire.vcxproj
+++ b/VS2015/Saphire/Saphire.vcxproj
@@ -20,21 +20,29 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\GraphicsEngine.cpp" />
+    <ClCompile Include="..\..\src\Image.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
-    <ClCompile Include="..\..\src\Drawable.cpp" />
+    <ClCompile Include="..\..\src\ResourceManager.cpp" />
+    <ClCompile Include="..\..\src\TextureManager.cpp" />
+    <ClCompile Include="..\..\src\Widget.cpp" />
     <ClCompile Include="..\..\src\SDLRenderer.cpp" />
     <ClCompile Include="..\..\src\SDLSurface.cpp" />
     <ClCompile Include="..\..\src\SDLTexture.cpp" />
     <ClCompile Include="..\..\src\SDLWindow.cpp" />
+    <ClCompile Include="..\..\src\WidgetBuilder.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\Drawable.h" />
+    <ClInclude Include="..\..\src\Image.h" />
+    <ClInclude Include="..\..\src\ResourceManager.h" />
+    <ClInclude Include="..\..\src\TextureManager.h" />
+    <ClInclude Include="..\..\src\Widget.h" />
     <ClInclude Include="..\..\src\GraphicsEngine.h" />
     <ClInclude Include="..\..\src\SDLDeleter.h" />
     <ClInclude Include="..\..\src\SDLRenderer.h" />
     <ClInclude Include="..\..\src\SDLSurface.h" />
     <ClInclude Include="..\..\src\SDLTexture.h" />
     <ClInclude Include="..\..\src\SDLWindow.h" />
+    <ClInclude Include="..\..\src\WidgetBuilder.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A6650309-F5FA-4706-8A32-037AD5481A01}</ProjectGuid>
