--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,15 @@ VS2015/pugixml/x64/*
 VS2015/Saphire/Debug/
 VS2015/Saphire/Release/
 VS2015/Saphire/x64/*
+VS2015/libpng/Debug/
+VS2015/libpng/Release/
+VS2015/libpng/x64/
+VS2015/zlib/Debug/
+VS2015/zlib/Release/
+VS2015/zlib/x64/
+VS2015/libjpeg/Debug/
+VS2015/libjpeg/Release/
+VS2015/libjpeg/x64/
 VS2015/Debug/
 VS2015/Release/
 VS2015/x64/*
@@ -19,6 +28,3 @@ VS2015/x64/*
 VS2015/Saphire.VC.db
 VS2015/Saphire.VC.VC.opendb
 *.user
-VS2015/libpng/x64/
-VS2015/zlib/x64/
-VS2015/libjpeg/x64/
