Added cmake modules for external dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required (VERSION 3.1)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 project (saphiregui)
 
+find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+find_package(SDL2_ttf REQUIRED)
+find_package(PugiXML REQUIRED)
+
 file(GLOB_RECURSE Project_SOURCES "src/*.cpp")
 file(GLOB_RECURSE Project_HEADERS "src/*.h")
-file(GLOB_RECURSE External_SOURCES "extsrc/*.cpp")
-file(GLOB_RECURSE External_HEADERS "extsrc/*.h")
 
 set (Project_INCLUDE_DIRS "")
 
@@ -14,19 +18,24 @@ foreach (_headerFile ${Project_HEADERS})
     list (APPEND Project_INCLUDE_DIRS ${_dir})
 endforeach()
 
-foreach (_headerFile ${External_HEADERS})
-    get_filename_component(_dir ${_headerFile} PATH)
-    list (APPEND Project_INCLUDE_DIRS ${_dir})
-endforeach()
-
 list(REMOVE_DUPLICATES Project_INCLUDE_DIRS)
 
-include_directories(${Project_INCLUDE_DIRS})
+include_directories(${Project_INCLUDE_DIRS}
+                    ${SDL2_INCLUDE_DIR}
+                    ${SDL2_IMAGE_INCLUDE_DIR}
+                    ${SDL2_TTF_INCLUDE_DIR}
+                    ${pugixml_DIR})
+
 add_executable (saphiregui ${Project_SOURCES} ${External_SOURCES})
 
 set_property(TARGET saphiregui PROPERTY CXX_STANDARD 14)
 find_package (Threads)
-target_link_libraries (saphiregui SDL2 SDL2_image SDL2_ttf pugixml ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries (saphiregui 
+                       ${SDL2_LIBRARIES}
+                       ${SDL2_IMAGE_LIBRARY}
+                       ${SDL2_TTF_LIBRARY}
+                       ${PUGIXML_LIBRARIES}
+                       ${CMAKE_THREAD_LIBS_INIT})
 
 include(CheckCXXCompilerFlag)
 
