Added support for linear animations of widget attributes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,14 @@ add_executable(bench_drawing
     "test/bench_drawing.cpp"
     )
 
+add_executable(animation_simple
+    "test/animation_simple.cpp"
+    )
+
 set_property(TARGET moonteargui PROPERTY CXX_STANDARD 14)
 set_property(TARGET smoketest PROPERTY CXX_STANDARD 14)
 set_property(TARGET bench_drawing PROPERTY CXX_STANDARD 14)
+set_property(TARGET animation_simple PROPERTY CXX_STANDARD 14)
 target_link_libraries (moonteargui
                        ${SDL2_LIBRARIES}
                        ${SDL2_IMAGE_LIBRARY}
@@ -53,6 +58,11 @@ target_link_libraries (smoketest
 target_link_libraries (bench_drawing
                        moonteargui
                        ${CMAKE_THREAD_LIBS_INIT})
+
+target_link_libraries (animation_simple
+                       moonteargui
+                       ${CMAKE_THREAD_LIBS_INIT})
+
 
 include(CheckCXXCompilerFlag)
 
