Plot widget groundwork

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,11 +43,17 @@ add_executable(blend_simple
     "test/blend_simple.cpp"
     )
 ]]
+
+add_executable(plot_test
+    "test/plot_test.cpp"
+    )
+
 set_property(TARGET moonteargui PROPERTY CXX_STANDARD 14)
 set_property(TARGET smoketest PROPERTY CXX_STANDARD 14)
 set_property(TARGET bench_drawing PROPERTY CXX_STANDARD 14)
 set_property(TARGET animation_simple PROPERTY CXX_STANDARD 14)
 #set_property(TARGET blend_simple PROPERTY CXX_STANDARD 14)
+set_property(TARGET plot_test PROPERTY CXX_STANDARD 14)
 
 target_link_libraries (moonteargui
                        ${SDL2_LIBRARIES}
@@ -73,6 +79,10 @@ target_link_libraries (blend_simple
                        moonteargui
                        ${CMAKE_THREAD_LIBS_INIT})
 ]]
+
+target_link_libraries (plot_test
+                       moonteargui
+                       ${CMAKE_THREAD_LIBS_INIT})
 
 include(CheckCXXCompilerFlag)
 
